# snippets-cxx

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: bitmask.hxx  http.h  snapshot.hxx  unpacker.hxx
include/http/: controller.h  request.h  response.h  router.h  status_code.h
src/: unpacker.cxx
tests/: bitmask.cxx  routing.cxx  unpacker.cxx
